<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="whatscloud">WhatsCloud</string>
    <string name="titleSignIn">Sign in to WhatsCloud</string>
    <string name="emailAddress">Email</string>
    <string name="signIn">Sign In</string>
    <string name="password">Password</string>
    <string name="webAppLink">Use WhatsCloud by visiting\n<b>https://whatscloud.io</b></string>
    <string name="encryptionKey">Your encryption key is</string>
    <string name="signInFailed">Sign In Failed</string>
    <string name="noInternet">No Internet</string>
    <string name="noInternetDesc">Please check your Internet connection and try again.</string>
    <string name="loading">Loading...</string>
    <string name="selectRecipient">Select a recipient for your message.</string>
    <string name="installWhatsApp">You must install WhatsApp to use WhatsCloud!</string>
    <string name="pushError">Push Notifications</string>
    <string name="pushErrorDesc">An error occurred while registering your device for push notifications.\n\nPlease try again
        later.
    </string>
    <string name="signOut">Sign Out</string>
    <string name="syncFailed">Sync Failed</string>
    <string name="syncFailedDesc">\n\nPlease contact us at whatscloudapp@gmail.com and we will help you fix this.</string>
    <string name="signUp">Sign Up</string>
    <string name="resetLink">Click here to reset your password if you forgot it.</string>
    <string name="titleSignUp">Sign up for WhatsCloud</string>
    <string name="signInLink">Existing users, click here to sign in</string>
    <string name="passwordConfirm">Password (confirm)</string>
    <string name="error">Error</string>
    <string name="checkPassword">Your password does not match the password confirmation!</string>
    <string name="noWhatsApp">WhatsApp Missing</string>
    <string name="noWhatsAppDesc">Please download and install WhatsApp before using WhatsCloud.</string>
    <string name="syncing">Syncing...</string>
    <string name="ok">OK</string>
    <string name="signingUp">Signing up...</string>
    <string name="loggingIn">Logging in...</string>
    <string name="loggingOut">Signing out...</string>
    <string name="rootAccessDesc">In order to use WhatsCloud, you must grant permanent root access to WhatsCloud in the next screen.</string>
    <string name="cancel">Cancel</string>
    <string name="syncComplete">Sync Complete</string>
    <string name="syncCompleteDesc">You are now ready to use WhatsCloud on your computer or tablet!\n\nGo to https://whatscloud.io/ to get started.
    </string>
    <string name="rootAccess">Root Access</string>
    <string name="signUpWithEmail">Create an Account</string>
    <string name="welcome">WhatsCloud needs <b>root access</b> to sync\nyour chats to your computer or tablet</string>
    <string name="resetPassword">Reset Password</string>
    <string name="requestInstructions">Please enter your email address to reset your WhatsCloud account password.</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="enterInstructions">A verification code has been sent to your email. Please enter it to reset your
        password.
    </string>
    <string name="code">Code</string>
    <string name="resetInstructions">Please enter a new password for your account.</string>
    <string name="success">Success</string>
    <string name="passwordResetSuccessfully">Your password has been changed successfully.</string>
    <string name="signInText">Existing users, click here to sign in</string>
    <string name="signInErrorDesc">Please enter both your email and password.</string>
    <string name="signUpErrorDesc">Please enter your email and password, twice.</string>
    <string name="signUpDesc">To sign up for WhatsCloud, you must enter your email address and choose a strong password.</string>
    <string name="signUpDescContinuation">You will use these credentials to access your chats online from your computer or tablet device.</string>
    <string name="signInDesc">To sign in to WhatsCloud, enter the account email address and password that you signed up with.</string>
    <string name="placeholderKey">000000</string>
    <string name="encryptionError">An error occurred while encrypting your data. Please contact us at whatscloudapp@gmail.com to get help.</string>
    <string name="noRootError">You must root your device to use this application!</string>
    <string name="noRootGrantedError">You must grant root access in order to use this application!\n\nGo to your Superuser application, grant WhatsCloud root access, and try again.</string>
    <string name="retrieveChatsError">Failed to retrieve chats list!</string>
    <string name="titleSuperuserTutorial">SuperSU Notifications</string>
    <string name="superuserTutorialIntro">By default, <b>SuperSU</b> will notify you every time WhatsCloud syncs your messages.</string>
    <string name="superuserTutorialDemo">WhatsCloud has been granted superuser permissions for an interactive shell</string>
    <string name="superuserTutorialContinuation">If you want to disable this behavior, click the icon above to go to <b>SuperSU</b> -> click the <b>Settings</b> tab -> disable <b>Show notifications</b>.</string>
    <string name="superuserLaunchFailed">Failed to launch SuperSU, please verify that it is installed.</string>
    <string name="superuserLaunchFailedTitle">SuperSU Missing</string>
    <string name="tutorialItem">Tutorials</string>
    <string name="nlIntro">By default, <b>WhatsCloud</b> will periodically check for new messages to sync, every few seconds.</string>
    <string name="nlDemo">You can prevent this behavior by enabling notification access for WhatsCloud.</string>
    <string name="nlContinuation">If you want to improve battery life, click the icon above and grant notification access to <b>WhatsCloud</b>.</string>
    <string name="done">Done</string>
    <string name="titleNotificationAccessTutorial">Notification Access</string>
    <string name="notificationAccessFailedTitle">Error</string>
    <string name="notificationAccessFailed"><![CDATA[Failed to open Notification Access settings. Try to manually enable notification access for WhatsCloud via Settings -> Sounds & Notificaitons -> Notification Access.]]></string>
    <string name="syncingChats">Syncing Chats...</string>
    <string name="syncingMessages">Syncing Messages...</string>
    <string name="noRootIntro">Your device is not rooted!</string>
    <string name="noRootDesc">We need permanent root access to sync your messages to our service, to make them available online.\n\nYou will <b>not</b> be able to use WhatsCloud without rooting your device.</string>
    <string name="noRootLink">Click here to learn more about rooting</string>
    <string name="learnMore">Learn More</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="deleteDesc">Click the button below to permanently delete your WhatsCloud account and all synced data.</string>
    <string name="deleteIntro">Sorry to see you go!</string>
</resources>