<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#e9e9e9">
    <ScrollView
            android:orientation="vertical"
            android:layout_above="@+id/reset"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <RelativeLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:textSize="14sp"
                        android:gravity="center"
                        android:textColor="#696969"
                        android:lineSpacingExtra="5dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/resetInstructions" />
                <EditText
                        android:textSize="16dp"
                        android:id="@+id/password"
                        android:padding="10dp"
                        android:background="@drawable/bg_input"
                        android:singleLine="true"
                        android:layout_marginTop="5dp"
                        android:imeOptions="actionNext"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password" />
                <EditText
                        android:textSize="16dp"
                        android:id="@+id/passwordConfirm"
                        android:padding="10dp"
                        android:background="@drawable/bg_input"
                        android:singleLine="true"
                        android:layout_marginTop="5dp"
                        android:imeOptions="actionGo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/passwordConfirm" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/reset"
        android:textColor="#fff"
        android:background="@drawable/bg_button"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:text="@string/reset"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>