<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#e9e9e9"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        <LinearLayout
                android:id="@+id/layout"
                android:paddingTop="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="35dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/icon"
                    android:layout_height="200dp"
                    android:layout_width="fill_parent"
                    android:src="@drawable/ic_chat_big"
                    android:layout_marginBottom="15dp" />
            <TextView
                android:id="@+id/instructions"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="#696969"
                android:lineSpacingExtra="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/webAppLink" />
            <TextView
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="#696969"
                android:layout_marginTop="30dp"
                android:lineSpacingExtra="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/encryptionKey" />
            <EditText
                android:id="@+id/encryptionKey"
                android:padding="5dp"
                android:textSize="47sp"
                android:enabled="false"
                android:textColor="#696969"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/placeholderKey"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
            android:gravity="center"
            android:id="@+id/adContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" />
</RelativeLayout>

