<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#e9e9e9"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        <LinearLayout
                android:id="@+id/layout"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="35dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/icon"
                    android:layout_height="200dp"
                    android:layout_width="fill_parent"
                    android:src="@drawable/ic_chat_big"
                    android:layout_marginBottom="15dp" />
            <TextView
                    android:id="@+id/instructions"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="#696969"
                    android:lineSpacingExtra="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome" />
            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                        android:id="@+id/signUp"
                        android:textColor="#fff"
                        android:textSize="18dp"
                        android:background="@drawable/bg_button"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="fill_parent"
                        android:layout_height="50dp"
                        android:text="@string/signUpWithEmail"/>
                <TextView
                    android:id="@+id/signIn"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="#696969"
                    android:lineSpacingExtra="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signInText" />
                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>